	  Bug fix and patch courtesy of Nicolai Lissner.

2009-03-28 Saturday 00:16  Rocky Bernstein <rocky@gnu.org>

	* bashdb-trace.in, dbg-init.sh, test/unit/test-bashdb-trace.sh.in:
	  Correct test in bashdb-trace: -d twice in a row Bug id 2498103

2009-03-27 Friday 23:40  Rocky Bernstein <rocky@gnu.org>

	* configure.ac, doc/bashdb.texi: Update release number

2009-02-13 Friday 21:37  Rocky Bernstein <rocky@gnu.org>

	* command/stepping.sh, test/data/Makefile.am,
	  test/data/bug-step.cmd, test/data/bug-step.cmd~,
	  test/data/bug-step.right, test/example/Makefile.am,
	  test/example/bug-step.sh, test/integration/test-bug-step: Fix bug
	  in clearing functrace flag in a "step" after a "next". Bug
	  reported by Richard A Hogaboom

2009-01-06 Tuesday 11:51  Rocky Bernstein <rocky@gnu.org>

	* doc/bashdb.texi: Clean up text surrounding PS4.

2008-11-30 Sunday 22:10  Rocky Bernstein <rocky@gnu.org>

	* lib/: alias.sh, frame.sh: return -1 => return -- -1

2008-11-28 Friday 17:40  Rocky Bernstein <rocky@gnu.org>

	* configure.ac: Allow bash 3.1. Comment by otheus
	  https://sourceforge.net/forum/message.php?msg_id=5730043

2008-11-18 Tuesday 18:11  Rocky Bernstein <rocky@gnu.org>

	* bashdb-trace.in: Some comment corrections and typos

2008-11-17 Monday 08:29  Rocky Bernstein <rocky@gnu.org>

	* NEWS: Adminstrivia

2008-11-17 Monday 08:24  Rocky Bernstein <rocky@gnu.org>

	* .cvsignore: Administrivia

2008-11-17 Monday 08:22  Rocky Bernstein <rocky@gnu.org>

	* test/unit/.cvsignore: Last commit before 4.0-0.2 release

2008-11-15 Saturday 18:20  Rocky Bernstein <rocky@gnu.org>

	* doc/bashdb.texi: Go over manual in preparation for release.

2008-11-15 Saturday 18:05  Rocky Bernstein <rocky@gnu.org>

	* command/: eval.sh, break.sh: Sync up with zshdb

2008-11-15 Saturday 17:59  Rocky Bernstein <rocky@gnu.org>

	* command/: continue.sh, delete.sh, edit.sh, help.sh: Synch up with
	  zshdb

2008-11-15 Saturday 17:50  Rocky Bernstein <rocky@gnu.org>
